--- a/maps.html
+++ b/maps.html
@@ -18,6 +18,14 @@
         };
         
         var peta = new google.maps.Map(document.getElementById("googleMap"), propertiPeta);
+
+        // membuat Marker
+        var marker=new google.maps.Marker({
+            position: new google.maps.LatLng(41.40338, 2.17403),
+            map: peta,
+            icon: "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png",
+            animation: google.maps.Animation.BOUNCE
+  });
         }
 
         // event jendela di-load  
@@ -28,7 +36,7 @@
 <body>
 
     <!-- Elemen yang akan menjadi kontainer peta -->
-    <div id="googleMap" style="width:100%;height:600px;"></div>
+    <div id="googleMap" style="width:100%;height:700px;"></div>
   
 </body>
 </html>
