--- a/maps.html
+++ b/maps.html
@@ -7,36 +7,55 @@
   
     <!-- Menyisipkan library Google Maps -->
     <script src="http://maps.googleapis.com/maps/api/js"></script>
+</head>
 
-    <script>
-        // fungsi initialize untuk mempersiapkan peta
-        function initialize() {
-        var propertiPeta = {
-            center:new google.maps.LatLng(41.40338, 2.17403),
-            zoom:17,
-            mapTypeId:google.maps.MapTypeId.terrain
-        };
+<body>
+    <!-- Elemen yang akan menjadi kontainer peta -->
+    <div id="googleMap" style="width:100%;height:700px;"></div>
+</body>
+
+<script>
+    // variabel global marker
+    var marker;
+  
+    function taruhMarker(peta, posisiTitik){
+    
+    if( marker ){
+      // pindahkan marker
+      marker.setPosition(posisiTitik);
+    } else {
+      // buat marker baru
+      marker = new google.maps.Marker({
+        position: posisiTitik,
+        map: peta
+      });
+    }
+}
+    // fungsi initialize untuk mempersiapkan peta
+    function initialize() {
+    var propertiPeta = {
+        center:new google.maps.LatLng(41.40338, 2.17403),
+        zoom:17,
+        mapTypeId:google.maps.MapTypeId.ROADMAP
+    };
         
-        var peta = new google.maps.Map(document.getElementById("googleMap"), propertiPeta);
+    var peta = new google.maps.Map(document.getElementById("googleMap"), propertiPeta);
 
-        // membuat Marker
-        var marker=new google.maps.Marker({
-            position: new google.maps.LatLng(41.40338, 2.17403),
-            map: peta,
-            icon: "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png",
-            animation: google.maps.Animation.BOUNCE
+    // membuat Marker
+    var marker=new google.maps.Marker({
+        position: new google.maps.LatLng(41.40338, 2.17403),
+        map: peta,
+        animation: google.maps.Animation.BOUNCE
+  });
+
+    // even listner ketika peta diklik
+    google.maps.event.addListener(peta, 'click', function(event) {
+    taruhMarker(this, event.latLng);
   });
         }
 
-        // event jendela di-load  
-        google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-  
-</head>
-<body>
+    // event jendela di-load  
+    google.maps.event.addDomListener(window, 'load', initialize);
+</script>
 
-    <!-- Elemen yang akan menjadi kontainer peta -->
-    <div id="googleMap" style="width:100%;height:700px;"></div>
-  
-</body>
 </html>
